Fix gap issue on main-grid-right

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
     --font-weight-standard: 360;
     --font-weight-bold: 500;
 
+    --profile-pic-small: 45px;
+    --profile-pic-large: 80px;
+
     --primary-color: rgb(121, 121, 255);
     --secondary-color: rgb(255, 145, 0);
     --primary-color-dark: rgb(103, 103, 219);
@@ -164,36 +167,28 @@ nav {
 
 .main-grid {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 23fr 10fr;
     grid-template-rows: 1fr;
+    gap: 30px;
+    padding: 30px;
 }
 
 .main-grid-right {
     grid-column: 2 / 3;
-    padding-left: 15px;
-    padding-right: 30px;
-    display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .main-grid-left {
     grid-column: 1 / 2;
-    padding-left: 30px;
-    padding-right: 15px;
-}
-
-.main-grid-left,
-.main-grid-right {
-    padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 .projects-grid {
     display: grid;
     grid-template-rows: repeat(auto-fill, 1fr);
     grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
-    grid-gap: 40px;
+    grid-gap: 20px;
 }
 
 .card {
@@ -240,12 +235,12 @@ nav {
 }
 
 .profile-pic-small {
-    height: 40px;
+    height: var(--profile-pic-small);
     border-radius: 50%;
 }
 
 .profile-pic-large {
-    height: 80px;
+    height: var(--profile-pic-large);
     border-radius: 50%;
 }
 
